[package]
name = "frontier-template-test-client"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
description = "Ethereum RPC (web3) compatibility layer for Substrate."
license = "GPL-3.0"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.1" }
sp-runtime = { version = "2.0.0" }
sp-api = { version = "2.0.0" }
sc-executor = { version = "0.8.0" }
sc-light = { version = "2.0.0" }
sc-consensus = { version = "0.8.0" }
sc-client-api = { version = "2.0.0" }
substrate-test-client = { version = "2.0.0" }
frontier-template-runtime = { path = "../../runtime" }